# rsrand

./: .gitignore  Cargo.toml  README.md
src/: main.rs  words.rs
