[package]
name = "rsrand"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
rand = "0.9.1"
rand_chacha = "0.9.0"
ratatui = "0.29.0"
cli-log = "2.1.0"

[profile.release]
lto = true
debug = 0
incremental = true
opt-level = 2

[profile.no-optimize]
inherits = "dev"
debug = 0
opt-level = 0
